[package]
name = "yaftt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bluer = { version = "0.17.0", features = ["bluetoothd"] }
colored = "2.1.0"
crossterm = "0.27.0"
futures = "0.3.30"
inquire = "0.6.2"
tokio = { version = "1.36.0", features = ["full"] }
